force-app/main/default/objects/Member_Stats__c/Member_Stats__c.object-meta.xml
<CustomObject>
    <label>Member Stats</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Member Stat Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Member Stats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>