force-app/main/default/objects/Member_Stats__c/fields/Activation_Rate__c.field-meta.xml
<CustomField>
    <fullName>Activation_Rate__c</fullName>
    <formula>IF( Members_Invited__c = 0, 0, Members_Activated__c /  Members_Invited__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activation % Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>