force-app/main/default/objects/Member_Stats__c/fields/Avg_Course_Grade__c.field-meta.xml
<CustomField>
    <fullName>Avg_Course_Grade__c</fullName>
    <label>Avg Course Grade</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>