force-app/main/default/objects/Member_Stats__c/fields/Members_Activated__c.field-meta.xml
<CustomField>
    <fullName>Members_Activated__c</fullName>
    <label>Members Activated</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>