force-app/main/default/objects/Member_Stats__c/fields/Month_del__c.field-meta.xml
<CustomField>
    <fullName>Month_del__c</fullName>
    <formula>DATE( VALUE(LEFT( Month_End__c , 4)) ,VALUE( MID( Month_End__c , 5, 2)) 
, VALUE( RIGHT(Month_End__c, 2) ))</formula>
    <label>Month</label>
    <type>Date</type>
</CustomField>