force-app/main/default/objects/Member_Stats__c/fields/Month_End__c.field-meta.xml
<CustomField>
    <fullName>Month_End__c</fullName>
    <label>Month End</label>
    <length>20</length>
    <type>Text</type>
</CustomField>