force-app/main/default/objects/Member_Stats__c/fields/Total_Page_Views__c.field-meta.xml
<CustomField>
    <fullName>Total_Page_Views__c</fullName>
    <label>Total Page Views</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>